<resources>
    <string name="app_name">Hitung Nilai MOBPRO</string>
    <string name="text_view">Text View</string>
    <string name="hitung_nilai_intro">Ayo hitung nilai Mobpro mu sekarang!</string>
    <string name="praktikum">Praktikum</string>
    <string name="assessment1">Assessment 1</string>
    <string name="hitung">Hitung</string>
    <string name="assessment2">Assessment 2</string>
    <string name="assessment3">Assessment 3</string>
    <string name="reset">Reset</string>
    <string name="lihat_saran">Saran</string>
    <string name="bagikan">Bagikan</string>
    <string name="nilai_x">NILAI: %1$.2f</string>
    <string name="index_x">INDEX: %1$s</string>
    <string name="bagus">A</string>
    <string name="lumayan">B</string>
    <string name="buruk">C</string>
    <string name="nilai_invalid">Nilai tidak boleh kosong.</string>
    <string name="nilai_praktikum">Nilai Praktikum</string>
    <string name="nilai_assessment_1">Nilai Assessment 1</string>
    <string name="nilai_assessment_2">Nilai Assessment 2</string>
    <string name="nilai_assessment_3">Nilai Assessment 3</string>

    <string name="judul_a">Alhamdulillah Nilaimu A</string>
    <string name="judul_b">Baguslah, B not Bad</string>
    <string name="judul_C">Astaghfirullah Nilaimu C</string>
    <string name="saran_a">Pertahankan prestasimu dan jangan sombong dengan nilaimu.</string>
    <string name="saran_b">Cobalah untuk meluangkan waktu lebih banyak untuk belajar.</string>
    <string name="saran_c">Cobalah untuk introspeksi diri. Ingat, kesuksesan juga berawal dari kegagalan.</string>

    <string name="tentang_aplikasi">Tentang Aplikasi</string>
    <string name="copyright">Hitung Nilai MOBPRO merupakan sebuah aplikasi Android untuk menghitung nilai Mata Kuliah MOBPRO sehingga seseorang dapat mengetahui apakah nilainya A, B atau C.\n\nAplikasi ini dibuat untuk Assessment 2 Mobpro 1. Temukan kodenya di https://github.com/Akmalnataku/Assessment-2-Mobpro \n\nCopyright © 2022 Akmal Natakusuma.\nAll rights reserved.</string>
    <string name="bagikan_template">Nilai praktikum: %1$s \nAssessment 1: %2$s\nAssessment 2: %3$s\nAssessment 3: %4$s\nNilai akhir: %5$s\nINDEX: %6$s</string>
    <string name="belum_ada_histori">Belum ada histori</string>
    <string name="histori">Histori</string>

    <string name="hasil_x">NILAI: %1$.2f - %2$s</string>
    <string name="data_x">Praktikum: %1$s - Assessment 1: %2$s \nAssessment 2: %3$s - Assessment 3: %4$s</string>
    <string name="hapus_histori">Hapus Histori</string>
    <string name="konfirmasi_hapus">Hapus semua kenangan?</string>
    <string name="hapus">Hapus</string>
    <string name="batal">Batal</string>

    <string name="channel_name">Updater</string>
    <string name="channel_desc">Update data nilai otomatis</string>

    <string name="notif_title">Ada kenangan baru!</string>
    <string name="notif_text">Cek sekarang, siapa tau pengen kamu hapus</string>
</resources>